[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking", "cookie_store", "cookies", "gzip"] }
regex = "1"
serde_json = "1.0.89"

# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true

[[bin]]
name = "create-new-day"
path = "src/create-new-day/main.rs"

[[bin]]
name = "day1"
path = "src/day1/solution.rs"

[[bin]]
name = "day2"
path = "src/day2/solution.rs"

[[bin]]
name = "day3"
path = "src/day3/solution.rs"

[[bin]]
name = "day4"
path = "src/day4/solution.rs"

[[bin]]
name = "day5"
path = "src/day5/solution.rs"

[[bin]]
name = "day6"
path = "src/day6/solution.rs"

[[bin]]
name = "day7"
path = "src/day7/solution.rs"

[[bin]]
name = "day8"
path = "src/day8/solution.rs"